// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Process heading > code-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
const title = 'codegen.yml'
const frontMatter = {}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
    </_components.h1>
  )
}
"
`;

exports[`Process heading > code-with-text-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
const title = 'codegen.yml file'
const frontMatter = {}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
      {' file'}
    </_components.h1>
  )
}
"
`;

exports[`Process heading > dynamic-h1 1`] = `
{
  "frontMatter": {},
  "hasJsxInH1": true,
  "result": "/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
const title = 'Posts Tagged with “”'
const frontMatter = {}
import { useRouter } from 'next/router'
export const TagName = () => {
  const { tag } = useRouter().query
  return tag || null
}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return (
    <_components.h1>
      {'Posts Tagged with “'}
      <TagName />
      {'”'}
    </_components.h1>
  )
}
",
  "title": "Posts Tagged with “”",
}
`;

exports[`Process heading > no-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
const title = ''
const frontMatter = {}
export function useTOC(props) {
  return [
    {
      value: 'H2',
      id: 'h2',
      depth: 2
    }
  ]
}
function MDXLayout(props) {
  const { toc = useTOC(props) } = props
  const _components = {
    h2: 'h2',
    ..._provideComponents(),
    ...props.components
  }
  return <_components.h2 id={toc[0].id}>{toc[0].value}</_components.h2>
}
"
`;

exports[`Process heading > static-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
import { useMDXComponents as _provideComponents } from 'nextra/mdx'
const title = 'Hello World'
const frontMatter = {}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    h1: 'h1',
    ..._provideComponents(),
    ...props.components
  }
  return <_components.h1>{'Hello World'}</_components.h1>
}
"
`;
